--- a/src/pages/comp-experience/index.astro
+++ b/src/pages/comp-experience/index.astro
@@ -2,15 +2,63 @@
 import { Image } from "astro:assets";
 
 import Layout from "../../layouts/PageLayout.astro";
+import Section from "../../components/Section.astro";
+import { SITE_NAVIGATION } from "../../const";
+import type { NavLink } from "../../const";
+
+const currentNav = SITE_NAVIGATION.find(
+  (nav) => nav.href === "/comp-experience"
+);
 ---
 
 <Layout
   title="Home"
-  description="Matthew Ubalde portfolio. Ranging from Web and Game Development, and Creative Arts!"
+  description="Matthew Ubalde portfolio. Ranging from Web and Game Development."
 >
-  <!-- Introduction -->
-  <div>
-    Started going to Fansahwe College in 2019 as a Computer Programming and
-    Analysis student.
+  <div class="flex flex-row gap-4 m-8">
+    <Section noMargin textContent class="flex-grow">
+      <h1>Experience Summary</h1>
+      <p>
+        I'm a college student at Fanshawe College with a solid understanding of
+        programming and computers. Have experience in creating web, mobile, and
+        desktop applications in various frameworks.
+      </p>
+      <p>
+        On the right, you can check the different skills I've learned so far
+        throughout my career.
+      </p>
+      <p>
+        I'm currently trying to specialize int <b>Web and Game Development</b>
+      </p>
+    </Section>
+    <Section noMargin class="flex flex-col items-center gap-2">
+      <h2>Experiences</h2>
+      {
+        currentNav?.children &&
+          currentNav?.children.map((nav) => (
+            <a
+              href={nav.href}
+              class="bg-cyan-950 rounded-md p-2 text-center content-center"
+            >
+              {nav.label}
+            </a>
+          ))
+      }
+    </Section>
   </div>
+  <Section textContent class="w-3/4 mx-auto">
+    <h1>Fanshawe College 2019-2024</h1>
+    <p>
+      I was new to programming, but I had incredibly fun at my programming
+      course back in high-school. Throughout my experience in Fanshawe, I've
+      learned a lot and created a solid and firm understanding of computers and
+      programming. I'm able to learn other programming languages fairly quickly,
+      and able to create applications in web, mobile, and desktop.
+    </p>
+    <p>
+      I'm not an expert, but learning these technologies are fun and
+      interesting, and I would love to get into the tech industry to improve my
+      skills and help to create applications in need.
+    </p>
+  </Section>
 </Layout>
