--- a/src/components/BadgeContainer.astro
+++ b/src/components/BadgeContainer.astro
@@ -1,9 +1,9 @@
 ---
-import type { ExperienceShowcase } from "../const";
+import type { ExperienceBadgeType } from "../const";
 import ExperienceBadge from "./ExperienceBadge.astro";
 
 interface Props {
-  src: Array<ExperienceShowcase>;
+  src: Array<ExperienceBadgeType>;
 }
 
 const { src } = Astro.props;
