--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -1,9 +1,9 @@
 ---
 import { Image } from "astro:assets";
-import type { ExperienceShowcase } from "../const";
+import type { ExperienceBadgeType } from "../const";
 
 interface Props {
-  src: ExperienceShowcase;
+  src: ExperienceBadgeType;
 }
 
 const { src } = Astro.props;
