created new folder for Navbar

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,7 +2,7 @@
 import Footer from "../components/Footer.astro";
 import BaseHead from "../components/Metadata/BaseHead.astro";
 
-import Navbar from "../components/Navbar.vue";
+import Navbar from "../components/Navbar/Navbar.vue";
 // import Navbar from "../components/Navbar.astro";
 
 const pathname = Astro.url.pathname;
