made the PageProjectLayout to have projects on the side

--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 
-import Layout from "../../../layouts/PageLayout.astro";
+import Layout from "../../../layouts/PageProjectLayout.astro";
 import Section from "../../../components/Section.astro";
 import BadgeContainer from "../../../components/BadgeContainer.astro";
 
@@ -18,31 +18,27 @@ const gameProj = projects.find((p) => p.id === "game")?.data;
   title="Game"
   description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
 >
-  <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
-    <Section noMargin textContent class="flex-grow">
-      <h1>Experience Summary</h1>
-      <p>
-        Was taught on how to use the Unity Engine, but developed games as a
-        side-hobby with Godot. This is purely as an interest, but willing to try
-        to break into this industry when given the opportunity.
-      </p>
-    </Section>
-    <Section noMargin class="w-2/4">
-      <h1 class="text-center">Game Experiences</h1>
-      {gameExp && <BadgeContainer src={gameExp} />}
-    </Section>
-  </div>
-  <div class="m-8 h-2/3 border-4 border-cyan-900 rounded-md">
-    <Section noMargin textContent class="my-8 mx-auto w-2/3">
-      <h1>Games for Fun</h1>
-      <p>
-        These are purely made out of fun as I found the game development
-        interesting since I was really young. I like making games that are
-        simple, but tried to make it deep and rewarding at the same time.
-      </p>
-    </Section>
-    <div class="h-96 p-8 overflow-y-scroll">
-      {gameProj && <ProjectContainer src={gameProj} />}
-    </div>
-  </div>
+  <Section textContent class="flex-grow">
+    <h1>Experience Summary</h1>
+    <p>
+      Was taught on how to use the Unity Engine, but developed games as a
+      side-hobby with Godot. This is purely as an interest, but willing to try
+      to break into this industry when given the opportunity.
+    </p>
+  </Section>
+  <Section textContent>
+    <h1>Game Experiences</h1>
+    {gameExp && <BadgeContainer src={gameExp} />}
+  </Section>
+  <Fragment slot="projectAbout">
+    <h1>Games for Fun</h1>
+    <p>
+      These are purely made out of fun as I found the game development
+      interesting since I was really young. I like making games that are simple,
+      but tried to make it deep and rewarding at the same time.
+    </p>
+  </Fragment>
+  <Fragment slot="projects">
+    {gameProj && <ProjectContainer src={gameProj} />}
+  </Fragment>
 </Layout>
