--- a/src/layouts/PageProjectLayout.astro
+++ b/src/layouts/PageProjectLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Section from "../components/Section.astro";
 import PageLayout from "./PageLayout.astro";
 
 interface Props {
@@ -10,12 +11,21 @@ const { title, description } = Astro.props;
 ---
 
 <PageLayout title={title} description={description}>
-  <div class="grid grid-cols-3 gap-4">
-    <div class="col-span-2">
+  <div class="grid grid-cols-3 grid-rows-1 gap-4">
+    <div class="col-span-2 min-h-screen">
       <slot />
     </div>
-    <aside class="col-span-1">
-      <slot name="projects" />
-    </aside>
+    <div class="relative col-span-1">
+      <aside class="flex flex-col sticky top-24 bottom-0 right-4 h-screen mr-8">
+        <Section textContent>
+          <slot name="projectAbout" />
+        </Section>
+        <div
+          class="flex-grow flex flex-col overflow-y-scroll border-4 border-cyan-900 rounded-md"
+        >
+          <slot name="projects" />
+        </div>
+      </aside>
+    </div>
   </div>
 </PageLayout>
