update type path in ProjectContainer

--- a/src/components/ProjectContainer.astro
+++ b/src/components/ProjectContainer.astro
@@ -1,6 +1,6 @@
 ---
 import ProjectShowcase from "./ProjectShowcase.astro";
-import type { ProjectShowcase as ProjectShowcaseType } from "../const";
+import type { ProjectShowcaseType } from "../types";
 
 interface Props {
   src: Array<ProjectShowcaseType>;
