--- a/src/components/ProjectContainer.astro
+++ b/src/components/ProjectContainer.astro
@@ -9,6 +9,6 @@ interface Props {
 const { src } = Astro.props;
 ---
 
-<div class="flex flex-col justify-center items-center gap-4 mx-8">
+<div class="flex flex-col justify-center items-center gap-8 w-2/3 mx-auto">
   {src.map((p) => <ProjectShowcase src={p} />)}
 </div>
