--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -18,18 +18,20 @@ const gameProj = projects.find((p) => p.id === "game")?.data;
   title="Game"
   description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
 >
-  <Section textContent class="flex-grow">
-    <h1>Experience Summary</h1>
-    <p>
-      Was taught on how to use the Unity Engine, but developed games as a
-      side-hobby with Godot. This is purely as an interest, but willing to try
-      to break into this industry when given the opportunity.
-    </p>
-  </Section>
-  <Section textContent>
-    <h1>Game Experiences</h1>
-    {gameExp && <BadgeContainer src={gameExp} />}
-  </Section>
+  <div class="flex gap-8 m-8">
+    <Section noMargin textContent class="w-1/3">
+      <h1>Experience Summary</h1>
+      <p>
+        Was taught on how to use the Unity Engine, but developed games as a
+        side-hobby with Godot. This is purely as an interest, but willing to try
+        to break into this industry when given the opportunity.
+      </p>
+    </Section>
+    <Section noMargin textContent class="flex-grow">
+      <h1>Game Experiences</h1>
+      {gameExp && <BadgeContainer src={gameExp} />}
+    </Section>
+  </div>
   <div>
     <Section textContent class="w-1/2 mx-auto">
       <h1>Games for Fun</h1>
