--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -18,7 +18,7 @@ const gameProj = projects.find((p) => p.id === "game")?.data;
   title="Game"
   description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
 >
-  <div class="flex gap-8 m-8">
+  <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
     <Section noMargin textContent class="w-1/3">
       <h1>Experience Summary</h1>
       <p>
