--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,5 +1,7 @@
 ---
+import type { CollectionEntry } from "astro:content";
 import BaseLayout from "./BaseLayout.astro";
+import Section from "../components/Section.astro";
 
 interface Props {
   title: string;
@@ -10,7 +12,13 @@ const { title, description } = Astro.props;
 ---
 
 <BaseLayout title={title} description={description}>
-  <main class="min-h-screen w-4/5 bg-cyan-950 bg-opacity-35 mx-auto">
-    <slot />
+  <main class="min-h-screen mx-auto">
+    <Section textContent class="w-1/2 mx-auto">
+      <h1>{title}</h1>
+      <p>{description}</p>
+    </Section>
+    <Section class="w-2/3 mx-auto">
+      <slot />
+    </Section>
   </main>
 </BaseLayout>
