update type names and paths in components

--- a/src/components/BadgeContainer.astro
+++ b/src/components/BadgeContainer.astro
@@ -1,5 +1,5 @@
 ---
-import type { ExperienceBadgeType } from "../const";
+import type { ExperienceBadgeType } from "../types";
 import ExperienceBadge from "./ExperienceBadge.astro";
 
 interface Props {
