--- a/src/components/BadgeContainer.astro
+++ b/src/components/BadgeContainer.astro
@@ -10,5 +10,14 @@ const { src } = Astro.props;
 ---
 
 <div class="flex flex-wrap justify-center gap-x-4 gap-y-6">
-  {src.map((badge) => <ExperienceBadge src={badge} />)}
+  {
+    src.map((badge) => (
+      <ExperienceBadge
+        title={badge.title}
+        src={badge.src}
+        alt={badge.alt}
+        experience={badge.experience}
+      />
+    ))
+  }
 </div>
