--- a/src/components/ImageLink.astro
+++ b/src/components/ImageLink.astro
@@ -1,24 +1,27 @@
 ---
-import { Image } from "astro:assets";
+import type { ImageMetadata } from "astro";
 import type { HTMLAttributes } from "astro/types";
 import type { ImageLinkType } from "../types";
 
-interface Props extends HTMLAttributes<"img"> {
-  link: ImageLinkType;
+import { Image } from "astro:assets";
+
+type Props = ImageLinkType & {
+  class: string;
   width: number;
   height: number;
-  // loading: string;
-}
+};
 
-const { width, height, link, loading, ...props } = Astro.props;
+const {
+  src,
+  width,
+  height,
+  href,
+  alt,
+  class: className,
+  ...props
+} = Astro.props;
 ---
 
-<a href={link.href} target="_blank" rel="noreferrer" {...props}>
-  <Image
-    src={link.src}
-    width={width}
-    height={height}
-    alt={link.alt}
-    loading={loading}
-  />
+<a href={href} target="_blank" rel="noreferrer" {...props}>
+  <Image src={src} width={width} height={height} alt={alt} />
 </a>
