make ImageLink's class, width, and height optional

--- a/src/components/ImageLink.astro
+++ b/src/components/ImageLink.astro
@@ -6,9 +6,9 @@ import type { ImageLinkType } from "../types";
 import { Image } from "astro:assets";
 
 type Props = ImageLinkType & {
-  class: string;
-  width: number;
-  height: number;
+  class?: string;
+  width?: number;
+  height?: number;
 };
 
 const {
