--- a/src/components/ProjectContainer.astro
+++ b/src/components/ProjectContainer.astro
@@ -1,14 +1,3 @@
----
-import ProjectShowcase from "./ProjectShowcase.astro";
-import type { ProjectShowcaseType } from "../types";
-
-interface Props {
-  src: Array<ProjectShowcaseType>;
-}
-
-const { src } = Astro.props;
----
-
 <div class="flex flex-col justify-center items-center gap-8 w-2/3 mx-auto">
-  {src.map((p) => <ProjectShowcase src={p} />)}
+  <slot />
 </div>
