--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -6,12 +6,13 @@ import Section from "../../../components/Section.astro";
 import BadgeContainer from "../../../components/BadgeContainer.astro";
 
 import ProjectContainer from "../../../components/ProjectContainer.astro";
+import ProjectShowcase from "../../../components/ProjectShowcase.astro";
 
 const experiences = await getCollection("experiences");
-const projects = await getCollection("projects");
+const projects = await getCollection("gameArticles");
 
 const gameExp = experiences.find((e) => e.id === "game")?.data;
-const gameProj = projects.find((p) => p.id === "game")?.data;
+const gameProjects = projects.map((p) => p.data);
 ---
 
 <Layout
@@ -41,7 +42,22 @@ const gameProj = projects.find((p) => p.id === "game")?.data;
         simple, but tried to make it deep and rewarding at the same time.
       </p>
     </Section>
-    {gameProj && <ProjectContainer src={gameProj} />}
+    <ProjectContainer>
+      {
+        projects.map((p) => (
+          <ProjectShowcase
+            title={p.data.title}
+            description={p.data.description}
+            coverImage={p.data.coverImage}
+            coverImageAlt={p.data.coverImageAlt}
+            href={`game/${p.id}`}
+            itchioLink={p.data.itchio}
+            steamLink={p.data.steam}
+            githubLink={p.data.github}
+          />
+        ))
+      }
+    </ProjectContainer>
   </div>
   <!-- <Fragment slot="projectAbout">
     <h1>Games for Fun</h1>
