fix icons sticking together in the ProjectShowcase

--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -25,7 +25,7 @@ import githubImage from "../assets/icons/github-mark.svg";
 
 <div class="flex flex-row gap-8">
   <div class="flex justify-center items-start gap-2 w-3/4 my-auto">
-    <Section noMargin noPadding class="flex flex-col p-2 mt-4 min-w-fit">
+    <Section noMargin noPadding class="flex flex-col gap-2 p-2 mt-4 min-w-fit">
       {
         itchioLink && (
           <ImageLink
