Have a go back button for the articles

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -4,6 +4,7 @@ import Section from "../components/Section.astro";
 import { Image } from "astro:assets";
 
 interface Props {
+  prevNav: string;
   title: string;
   description: string;
   // Gotten this from the IntelliSense
@@ -16,10 +17,10 @@ interface Props {
   coverImageAlt: string;
 }
 
-const { title, description, coverImage, coverImageAlt } = Astro.props;
+const { prevNav, title, description, coverImage, coverImageAlt } = Astro.props;
 ---
 
-<BaseLayout title={title} description={description}>
+<BaseLayout prevNav={prevNav} title={title} description={description}>
   <main class="min-h-screen mx-auto">
     <Section textContent class="w-1/2 mx-auto">
       <h1>{title}</h1>
