--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -2,11 +2,12 @@
 import BaseLayout from "./BaseLayout.astro";
 
 interface Props {
+  prevNav?: string;
   title: string;
   description: string;
 }
 
-const { title, description } = Astro.props;
+const { prevNav, title, description } = Astro.props;
 ---
 
 <BaseLayout title={title} description={description}>
