--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -23,18 +23,24 @@ import steamImage from "../assets/icons/steam.svg";
 import githubImage from "../assets/icons/github-mark.svg";
 ---
 
-<div class="flex gap-2 justify-center items-center">
+<div class="flex flex-col sm:flex-row gap-2 justify-center items-center">
   <!-- Project about -->
-  <div class="flex items-start gap-2">
-    <Section noMargin noPadding class="flex flex-col gap-2 p-2 mt-4 min-w-fit">
+  <div
+    class="flex flex-row-reverse sm:flex-row justify-center items-center gap-2"
+  >
+    <Section
+      noMargin
+      noPadding
+      class="flex flex-col gap-2 p-2 sm:mt-4 min-w-16 sm:min-w-14"
+    >
       {
         itchioLink && (
           <ImageLink
             src={itchioImage}
             alt=""
             href={itchioLink}
-            width={48}
-            height={48}
+            width={64}
+            height={64}
           />
         )
       }
@@ -44,8 +50,8 @@ import githubImage from "../assets/icons/github-mark.svg";
             src={steamImage}
             alt=""
             href={steamLink}
-            width={48}
-            height={48}
+            width={64}
+            height={64}
           />
         )
       }
@@ -55,8 +61,8 @@ import githubImage from "../assets/icons/github-mark.svg";
             src={githubImage}
             alt=""
             href={githubLink}
-            width={48}
-            height={48}
+            width={64}
+            height={64}
           />
         )
       }
