--- a/src/pages/comp-experience/game/index.astro
+++ b/src/pages/comp-experience/game/index.astro
@@ -19,7 +19,7 @@ const gameExp = experiences.find((e) => e.id === "game")?.data;
   description="Matthew Ubalde game development portfolio. Have experience in Godot and Unity to create well designed games."
 >
   <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
-    <Section noMargin textContent class="w-1/3">
+    <Section noMargin textContent class="sm:w-1/3">
       <h1>Experience Summary</h1>
       <p>
         Was taught on how to use the Unity Engine, but developed games as a
