--- a/src/components/ProjectContainer.astro
+++ b/src/components/ProjectContainer.astro
@@ -1,3 +1,5 @@
-<div class="flex flex-col justify-center items-center gap-8 w-2/3 mx-auto">
+<div
+  class="flex flex-col justify-center items-center gap-8 w-3/4 sm:w-2/3 mx-auto"
+>
   <slot />
 </div>
