make the entire site more mobile friendly

--- a/src/pages/art-experience/index.astro
+++ b/src/pages/art-experience/index.astro
@@ -7,7 +7,7 @@ import Layout from "../../layouts/PageLayout.astro";
   title="Art"
   description="Mattew Ubalde's art portfolio. Purely a hobby and for fun"
 >
-  <Section textContent class="w-3/4 mx-auto">
+  <Section textContent class="sm:w-3/4 sm:mx-auto">
     <h1>Experience Summary</h1>
     <p>
       I'm a self-taught digital artist drawing illustrations with a cartoon
@@ -21,7 +21,7 @@ import Layout from "../../layouts/PageLayout.astro";
       made - the illustrations and the sprites are made by me.
     </p>
   </Section>
-  <Section textContent class="w-2/3 mx-auto">
+  <Section textContent class="sm:w-2/3 sm:mx-auto">
     <p>
       There isn't much to show off from here until I'm able to show art that I
       found displays my skills at best. I've been busy with life and school, so
