--- a/src/pages/comp-experience/index.astro
+++ b/src/pages/comp-experience/index.astro
@@ -14,7 +14,7 @@ const currentNav = SITE_NAVIGATION.find(
   title="Home"
   description="Matthew Ubalde portfolio. Ranging from Web and Game Development."
 >
-  <div class="flex flex-row gap-4 m-8">
+  <div class="flex flex-col sm:flex-row gap-4 m-8">
     <Section noMargin textContent class="flex-grow">
       <h1>Experience Summary</h1>
       <p>
@@ -45,7 +45,7 @@ const currentNav = SITE_NAVIGATION.find(
       }
     </Section>
   </div>
-  <Section textContent class="w-3/4 mx-auto">
+  <Section textContent class="sm:w-3/4 sm:mx-auto">
     <h1>Fanshawe College 2019-2024</h1>
     <p>
       I was new to programming, but I had incredibly fun at my programming
