--- a/src/pages/comp-experience/mobile/index.astro
+++ b/src/pages/comp-experience/mobile/index.astro
@@ -17,7 +17,7 @@ const mobileProj = projects.find((e) => e.id === "mobile")?.data;
   description="Matthew Ubalde mobile development portfolio. Have experience in Android Studio and React Native to create Android apps."
 >
   <div class="flex flex-col sm:flex-row justify-between gap-8 m-8">
-    <Section noMargin textContent class="w-1/3">
+    <Section noMargin textContent class="sm:w-1/3">
       <h1>Experience Summary</h1>
       <p>
         Was taught how to use both Android Studio and React Native to develop
